Add libs directory

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -3,7 +3,7 @@
 ################################################################################
 cmake_minimum_required(VERSION 3.14) # FetchContent_MakeAvailable
 
-project(tybl)
-
-add_subdirectory(libs)
-add_subdirectory(apps)
+add_subdirectory(libvodka)
+#add_subdirectory(libcoord)
+#add_subdirectory(libmath)
+add_subdirectory(libparm)
