Moved clang-tidy files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,14 @@
 ################################################################################
 cmake_minimum_required(VERSION 3.14) # FetchContent_MakeAvailable
 
-project(tybl)
+project(tybl
+	VERSION 0.0.0
+	DESCRIPTION "Collection of C++ libraries and tools by me"
+	LANGUAGES CXX)
+
+include(FetchContent)
+include(utils/cmake/CompilerSettings.cmake)
+include(utils/cmake/Linters.cmake)
 
 add_subdirectory(libs)
 add_subdirectory(apps)
