--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -5,5 +5,5 @@ cmake_minimum_required(VERSION 3.14) # FetchContent_MakeAvailable
 
 add_subdirectory(libvodka)
 #add_subdirectory(libcoord)
-#add_subdirectory(libmath)
+add_subdirectory(libmath)
 add_subdirectory(libparm)
