Pattern lynel::vector after std::array
Composing lynel::vector from std::array required a lot of the code to be
rewritten. So it made sense to me that I should just write the raw
version instead of trying to compose it.

--- a/libs/libmath/CMakeLists.txt
+++ b/libs/libmath/CMakeLists.txt
@@ -3,13 +3,18 @@
 ################################################################################
 cmake_minimum_required(VERSION 3.14) # FetchContent_MakeAvailable
 
-add_library(math INTERFACE)
-target_compile_features(math INTERFACE cxx_static_assert)
-target_include_directories(math INTERFACE include)
+add_library(math)
+target_compile_features(math PUBLIC cxx_static_assert)
+target_include_directories(math PUBLIC include)
 target_sources(math
   INTERFACE
     include/math/stats/distribution.hpp
     include/math/stats/probability.hpp
-    include/math/pow10.hpp)
+    include/math/pow10.hpp
+  PRIVATE
+    src/math/lynel/vector.cpp
+  PUBLIC
+    include/math/lynel/vector.hpp
+  )
 
 add_subdirectory(test)
