Remove duplicate cmake constructs
When I moved everything into the same project, some of the projects kept
the CMake artifacts of a standalone project. I finally got around to
removing most of them. However, in removing them, I noticed that 1) I
haven't been running all the unit tests, and 2) reusing the unit_tests
target name causes issues. I need to fix libvodka and libparm. I think
I'm going to simplify/combine some of the unit test executables as well.

--- a/apps/BallSorter/CMakeLists.txt
+++ b/apps/BallSorter/CMakeLists.txt
@@ -1,13 +1,14 @@
 ################################################################################
 # License: The Unlicense (https://unlicense.org)
 ################################################################################
-cmake_minimum_required(VERSION 3.14) # FetchContent_MakeAvailable
+cmake_minimum_required(VERSION 3.13) # relative path target_sources()
 
-project(BallSorter
-	VERSION 1.0.0
-	DESCRIPTION "Solves to ball/bubble sorting games"
-	LANGUAGES CXX)
-
-add_executable(sort src/main.cpp src/Executor.cpp src/Board.cpp)
-target_compile_features(sort PRIVATE cxx_std_20) # 17: std::filesystem, 20: std::set::emplace()
+add_executable(sort)
+target_compile_features(sort PRIVATE cxx_std_20) # 20: std::set::emplace()
 target_compile_options(sort PRIVATE -Wall -Wextra -Wpedantic)
+target_sources(sort
+  PRIVATE
+    src/main.cpp
+    src/Executor.cpp
+    src/Board.cpp
+)
