--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -1,9 +1,9 @@
 ################################################################################
 # License: The Unlicense (https://unlicense.org)
 ################################################################################
-cmake_minimum_required(VERSION 3.14) # FetchContent_MakeAvailable
+cmake_minimum_required(VERSION 3.0)
 
 add_subdirectory(libvodka)
 #add_subdirectory(libcoord)
 add_subdirectory(libmath)
-add_subdirectory(libparm)
+#add_subdirectory(libparm)
