Restructure libmath test

--- a/libs/libmath/test/CMakeLists.txt
+++ b/libs/libmath/test/CMakeLists.txt
@@ -1,5 +1,19 @@
 ################################################################################
 # License: The Unlicense (https://unlicense.org)
 ################################################################################
+cmake_minimum_required(VERSION 3.13)
 
-add_subdirectory(unit_test)
+add_executable(libmath_t)
+target_link_libraries(libmath_t PRIVATE compiler_settings doctest::doctest math)
+target_sources(libmath_t
+  PRIVATE
+    src/main.cpp
+    src/math/fixed_point.cpp
+    src/math/integer.cpp
+    src/math/lynel/matrix.cpp
+    src/math/lynel/vector.cpp
+    src/math/next_power_of_two.cpp
+    src/math/stats/distribution.cpp
+)
+
+add_test(NAME test_libmath COMMAND libmath_t)
