--- a/apps/StackSorter/CMakeLists.txt
+++ b/apps/StackSorter/CMakeLists.txt
@@ -3,10 +3,10 @@
 ################################################################################
 cmake_minimum_required(VERSION 3.13) # relative path target_sources()
 
-add_executable(sort)
-target_compile_features(sort PRIVATE cxx_std_20) # 20: std::set::emplace()
-target_compile_options(sort PRIVATE -Wall -Wextra -Wpedantic)
-target_sources(sort
+add_executable(stacksort)
+target_compile_features(stacksort PRIVATE cxx_std_20) # 20: std::set::emplace()
+target_compile_options(stacksort PRIVATE -Wall -Wextra -Wpedantic)
+target_sources(stacksort
   PRIVATE
     src/main.cpp
     src/Executor.cpp
