--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -3,4 +3,4 @@
 ################################################################################
 cmake_minimum_required(VERSION 3.0)
 
-add_subdirectory(BallSorter)
+add_subdirectory(StackSorter)
