Enable libcoord compilation and test

--- a/libs/libcoord/test/CMakeLists.txt
+++ b/libs/libcoord/test/CMakeLists.txt
@@ -1,9 +1,12 @@
 ################################################################################
 # License: The Unlicense (https://unlicense.org)
 ################################################################################
+cmake_minimum_required(VERSION 3.13)
 
-# libfuzzer requires Clang
-if(CMAKE_CXX_COMPILER_ID MATCHES ".*Clang")
-  add_subdirectory(fuzz_test)
-endif()
-add_subdirectory(unit_test)
+add_executable(libcoord_t)
+target_link_libraries(libcoord_t PRIVATE compiler_settings doctest::doctest)
+target_sources(libcoord_t
+  PRIVATE
+    src/main.cpp
+)
+add_test(NAME test_libcoord COMMAND libcoord_t)
