--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -4,6 +4,6 @@
 cmake_minimum_required(VERSION 3.0)
 
 add_subdirectory(libvodka)
-#add_subdirectory(libcoord)
+add_subdirectory(libcoord)
 add_subdirectory(libmath)
 add_subdirectory(libparm)
