--- a/apps/StackSolver/CMakeLists.txt
+++ b/apps/StackSolver/CMakeLists.txt
@@ -3,10 +3,10 @@
 ################################################################################
 cmake_minimum_required(VERSION 3.13) # relative path target_sources()
 
-add_executable(stacksort)
-target_compile_features(stacksort PRIVATE cxx_std_20) # 20: std::set::emplace()
-target_compile_options(stacksort PRIVATE -Wall -Wextra -Wpedantic)
-target_sources(stacksort
+add_executable(stacksolve)
+target_compile_features(stacksolve PRIVATE cxx_std_20) # 20: std::set::emplace()
+target_compile_options(stacksolve PRIVATE -Wall -Wextra -Wpedantic)
+target_sources(stacksolve
   PRIVATE
     src/main.cpp
     src/Executor.cpp
