Move lynel to separate library

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(libvodka)
 add_subdirectory(libcoord)
 add_subdirectory(libmath)
 add_subdirectory(libparm)
+add_subdirectory(lynel)
