--- a/libs/libmath/CMakeLists.txt
+++ b/libs/libmath/CMakeLists.txt
@@ -3,18 +3,14 @@
 ################################################################################
 cmake_minimum_required(VERSION 3.13) # relative path target_sources()
 
-add_library(math)
-target_include_directories(math PUBLIC include)
-target_link_libraries(math PUBLIC compiler_settings)
+add_library(math INTERFACE)
+target_include_directories(math INTERFACE include)
+target_link_libraries(math INTERFACE compiler_settings)
 target_sources(math
   INTERFACE
     include/math/stats/distribution.hpp
     include/math/stats/probability.hpp
     include/math/pow10.hpp
-  PRIVATE
-    src/math/lynel/vector.cpp
-  PUBLIC
-    include/math/lynel/vector.hpp
-  )
+)
 
 add_subdirectory(test)
