--- a/libs/lynel/test/CMakeLists.txt
+++ b/libs/lynel/test/CMakeLists.txt
@@ -1,9 +1,13 @@
 ################################################################################
 # License: The Unlicense (https://unlicense.org)
 ################################################################################
+cmake_minimum_required(VERSION 3.13)
 
-# libfuzzer requires Clang
-if(CMAKE_CXX_COMPILER_ID MATCHES ".*Clang")
-  add_subdirectory(fuzz_test)
-endif()
-add_subdirectory(unit_test)
+add_executable(lynel_t)
+target_link_libraries(lynel_t PRIVATE compiler_settings doctest::doctest lynel)
+target_sources(lynel_t
+  PRIVATE
+    src/lynel/matrix.cpp
+    src/lynel/vector.cpp
+    src/main.cpp
+)
