--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,5 +21,6 @@ FetchContent_MakeAvailable(doctest)
 
 find_package(Eigen3 3.3 REQUIRED NO_MODULE)
 
+add_subdirectory(utils/doctest)
 add_subdirectory(libs)
 add_subdirectory(apps)
