--- a/libs/libmath/test/CMakeLists.txt
+++ b/libs/libmath/test/CMakeLists.txt
@@ -4,10 +4,9 @@
 cmake_minimum_required(VERSION 3.13)
 
 add_executable(libmath_t)
-target_link_libraries(libmath_t PRIVATE compiler_settings doctest::doctest math)
+target_link_libraries(libmath_t PRIVATE compiler_settings math test_base)
 target_sources(libmath_t
   PRIVATE
-    src/main.cpp
     src/math/fixed_point.cpp
     src/math/integer.cpp
     src/math/next_power_of_two.cpp
