--- a/libs/libparm/test/CMakeLists.txt
+++ b/libs/libparm/test/CMakeLists.txt
@@ -7,11 +7,10 @@ add_executable(libparm_t)
 target_link_libraries(libparm_t
   PRIVATE
     compiler_settings
-    doctest::doctest
-    parm)
+    parm
+    test_base)
 target_sources(libparm_t
   PRIVATE
-    src/main.cpp
     src/test_help.cpp)
 
 add_test(NAME test_libparm COMMAND libparm_t)
