--- a/libs/libvodka/test/CMakeLists.txt
+++ b/libs/libvodka/test/CMakeLists.txt
@@ -4,10 +4,9 @@
 cmake_minimum_required(VERSION 3.13)
 
 add_executable(libvodka_t)
-target_link_libraries(libvodka_t PRIVATE compiler_settings doctest::doctest vodka)
+target_link_libraries(libvodka_t PRIVATE compiler_settings vodka test_base)
 target_sources(libvodka_t
   PRIVATE
-    src/main.cpp
     src/vodka/algorithm/max.cpp
     src/vodka/array/array.cpp
     src/vodka/functional/less_equal.cpp
