Initial quaternion struct
I created a simple struct with four double precision floating point
numbers representing the scalar (w) and the vector components (x, y,
and z). These can be accessed directly, without accessors. There is no
constructor so it will require aggregate initialization for now.

Relevant links:
- Issue 3: Use my own types in libcoord instead of relying on Eigen
(https://github.com/tybl/tybl/issues/3)

--- a/libs/lynel/CMakeLists.txt
+++ b/libs/lynel/CMakeLists.txt
@@ -12,6 +12,7 @@ target_sources(lynel
     include/lynel/vector.hpp
     include/lynel/vector_ops.hpp
     include/lynel/matrix.hpp
+    include/lynel/quaternion.hpp
     include/lynel/vec3d.hpp
 )
 
