Replace Eigen components
I created simple vector and quaternion classes as stand-ins for the
Eigen components. Libcoord isn't completely functional, so this seems to
be sufficient at the moment. As I add functionality to libcoord, I will
need to add functionality to lynel for the vector and quaternion
classes.

Relevant links:
- Issue 3: Use my own types in libcoord instead of relying on Eigen
(https://github.com/tybl/tybl/issues/3)

--- a/libs/libcoord/CMakeLists.txt
+++ b/libs/libcoord/CMakeLists.txt
@@ -7,7 +7,8 @@ add_library(coord)
 target_include_directories(coord PUBLIC include)
 target_link_libraries(coord
   PUBLIC
-    Eigen3::Eigen
+    lynel
+    vodka
 )
 target_sources(coord
   PRIVATE
