Calculate vector length
I wasn't sure where to go with adding functionality to my linear algebra
library, so I figured I would add the dot product and use that to
calculate the vector's length.
I decided to make lynel a compiled library since vec3d isn't a template
and the functions can be compiled. Although, I will probably make it a
template in the future. (In fact, that may be my next step...)

--- a/libs/lynel/CMakeLists.txt
+++ b/libs/lynel/CMakeLists.txt
@@ -3,17 +3,19 @@
 ################################################################################
 cmake_minimum_required(VERSION 3.14) # FetchContent_MakeAvailable
 
-add_library(lynel INTERFACE)
-target_include_directories(lynel INTERFACE include)
-#target_link_libraries(lynel INTERFACE compiler_settings)
+add_library(lynel)
+target_include_directories(lynel PUBLIC include)
+target_link_libraries(lynel INTERFACE compiler_settings)
 target_sources(lynel
-  INTERFACE
+  PUBLIC
     include/lynel/vec.hpp
     include/lynel/vector.hpp
     include/lynel/vector_ops.hpp
     include/lynel/matrix.hpp
     include/lynel/quaternion.hpp
     include/lynel/vec3d.hpp
+  PRIVATE
+    src/lynel/vec3d.cpp
 )
 
 add_subdirectory(test)
