Changed lynel to liblinal
It had been bugging me that I was using a clever name for the linear
algebra library instead of following convention I have for the rest of
the libraries. I decided it was finally time to remedy that.

--- a/libs/libcoord/CMakeLists.txt
+++ b/libs/libcoord/CMakeLists.txt
@@ -7,7 +7,7 @@ add_library(coord)
 target_include_directories(coord PUBLIC include)
 target_link_libraries(coord
   PUBLIC
-    lynel
+    linal
     vodka
 )
 target_sources(coord
