Remove duplicate vector classes
I'm pretty happy with the solution in basic_matrix to represent both
matrices and vectors. As such, I don't think it's important to keep the
other vector implementations around so I can focus on rounding out
basic_matrix. This required replacing vec3d in libcoord. I will keep
matrix.hpp and vector_ops around for now so I can copy some of the
implementations, but they will likely go away in the future. I am also
considering how I want to organize the file(s) of this library. Do I
create a single file that contains both vectors and matrices or split
them out or something else.

--- a/libs/liblinal/CMakeLists.txt
+++ b/libs/liblinal/CMakeLists.txt
@@ -3,19 +3,14 @@
 ################################################################################
 cmake_minimum_required(VERSION 3.14) # FetchContent_MakeAvailable
 
-add_library(linal)
-target_include_directories(linal PUBLIC include)
+add_library(linal INTERFACE)
+target_include_directories(linal INTERFACE include)
 target_link_libraries(linal INTERFACE compiler_settings)
 target_sources(linal
   PUBLIC
-    include/linal/vec.hpp
-    include/linal/vector.hpp
-    include/linal/vector_ops.hpp
+    include/linal/basic_matrix.hpp
     include/linal/matrix.hpp
     include/linal/quaternion.hpp
-    include/linal/vec3d.hpp
-  PRIVATE
-    src/linal/vec3d.cpp
 )
 
 add_subdirectory(test)
