Rename linear algebra library again

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -7,4 +7,4 @@ add_subdirectory(libvodka)
 add_subdirectory(libcoord)
 add_subdirectory(libmath)
 add_subdirectory(libparm)
-add_subdirectory(liblinal)
+add_subdirectory(liblynel)
