--- a/libs/liblynel/CMakeLists.txt
+++ b/libs/liblynel/CMakeLists.txt
@@ -3,14 +3,14 @@
 ################################################################################
 cmake_minimum_required(VERSION 3.14) # FetchContent_MakeAvailable
 
-add_library(linal INTERFACE)
-target_include_directories(linal INTERFACE include)
-target_link_libraries(linal INTERFACE compiler_settings)
-target_sources(linal
+add_library(lynel INTERFACE)
+target_include_directories(lynel INTERFACE include)
+target_link_libraries(lynel INTERFACE compiler_settings)
+target_sources(lynel
   PUBLIC
-    include/linal/basic_matrix.hpp
-    include/linal/matrix.hpp
-    include/linal/quaternion.hpp
+    include/lynel/basic_matrix.hpp
+    include/lynel/matrix.hpp
+    include/lynel/quaternion.hpp
 )
 
 add_subdirectory(test)
