--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -5,4 +5,5 @@ cmake_minimum_required(VERSION 3.0)
 
 add_subdirectory(Cocles)
 add_subdirectory(Goon)
+add_subdirectory(SFML)
 add_subdirectory(StackSolver)
