--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(Cocles)
 add_subdirectory(Goon)
 add_subdirectory(SFML)
 add_subdirectory(StackSolver)
+add_subdirectory(DailyCodingProblem)
