Fix liblynel source type

--- a/libs/liblynel/CMakeLists.txt
+++ b/libs/liblynel/CMakeLists.txt
@@ -7,7 +7,7 @@ add_library(lynel INTERFACE)
 target_include_directories(lynel INTERFACE include)
 target_link_libraries(lynel INTERFACE compiler_settings)
 target_sources(lynel
-  PUBLIC
+  INTERFACE
     include/lynel/basic_matrix.hpp
     include/lynel/matrix.hpp
     include/lynel/quaternion.hpp
