Add project used to learn FLTK

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(Goon)
 add_subdirectory(SFML)
 add_subdirectory(StackSolver)
 add_subdirectory(DailyCodingProblem)
+add_subdirectory(LearnFLTK)
