Make test layout match src

--- a/apps/StackSolver/test/CMakeLists.txt
+++ b/apps/StackSolver/test/CMakeLists.txt
@@ -7,7 +7,8 @@ add_executable(stacksolver_t)
 target_link_libraries(stacksolver_t PRIVATE compiler_settings test_base stacksolvelib)
 target_sources(stacksolver_t
   PRIVATE
-    src/stacksolver.cpp
+    src/Board.cpp
+    src/stacksolve/StackState.cpp
 )
 
 add_test(NAME test_stacksolver COMMAND stacksolver_t)
