Optionally build libstats on Eigen3

--- a/libs/libstats/CMakeLists.txt
+++ b/libs/libstats/CMakeLists.txt
@@ -3,7 +3,9 @@
 ################################################################################
 cmake_minimum_required(VERSION 3.13) # relative path target_sources()
 
-find_package(Eigen3 3.3 REQUIRED NO_MODULE)
+find_package(Eigen3 3.3 QUIET NO_MODULE)
+
+if(Eigen3_FOUND)
 
 add_library(stats INTERFACE)
 target_include_directories(stats INTERFACE include)
@@ -11,3 +13,7 @@ target_link_libraries(stats INTERFACE Eigen3::Eigen)
 target_sources(stats INTERFACE include/stats/distribution.hpp)
 
 add_subdirectory(test)
+
+else()
+  message(WARNING "Not building libstats, install Eigen3")
+endif()
