Add GPS NMEA string parser

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -8,4 +8,5 @@ add_subdirectory(libcoord)
 add_subdirectory(libmath)
 add_subdirectory(libparm)
 add_subdirectory(liblynel)
+add_subdirectory(libnmea)
 add_subdirectory(libstats)
