--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -9,3 +9,4 @@ add_subdirectory(SFML)
 add_subdirectory(StackSolver)
 add_subdirectory(DailyCodingProblem)
 add_subdirectory(LearnFLTK)
+add_subdirectory(GpsLogger)
