Capture json musings

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -8,5 +8,6 @@ add_subdirectory(libcoord)
 add_subdirectory(libmath)
 add_subdirectory(libparm)
 add_subdirectory(liblynel)
+add_subdirectory(libjson)
 add_subdirectory(libnmea)
 add_subdirectory(libstats)
