Remove duplicate min_required statements

--- a/apps/Cocles/CMakeLists.txt
+++ b/apps/Cocles/CMakeLists.txt
@@ -1,11 +1,7 @@
 ################################################################################
 # License: The Unlicense (https://unlicense.org)
 ################################################################################
-cmake_minimum_required(VERSION 3.13)
 
 add_executable(cocles)
 target_link_libraries(cocles PRIVATE compiler_settings)
-target_sources(cocles
-  PRIVATE
-    src/cocles.cpp
-)
+target_sources(cocles PRIVATE src/cocles.cpp)
