--- a/utils/doctest/CMakeLists.txt
+++ b/utils/doctest/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 FetchContent_Declare(doctest
   GIT_REPOSITORY https://github.com/onqtam/doctest.git
-  GIT_TAG        "2.4.6")
+  GIT_TAG        "v2.4.8")
 FetchContent_MakeAvailable(doctest)
 
 add_library(test_base)
