--- a/utils/doctest/CMakeLists.txt
+++ b/utils/doctest/CMakeLists.txt
@@ -4,6 +4,7 @@
 
 FetchContent_Declare(doctest
   GIT_REPOSITORY https://github.com/onqtam/doctest.git
+  GIT_SHALLOW    TRUE
   GIT_TAG        "v2.4.8")
 FetchContent_MakeAvailable(doctest)
 
