--- a/libs/libstats/CMakeLists.txt
+++ b/libs/libstats/CMakeLists.txt
@@ -6,13 +6,13 @@ find_package(Eigen3 3.3 QUIET NO_MODULE)
 
 if(Eigen3_FOUND)
 
-add_library(stats INTERFACE)
-target_include_directories(stats INTERFACE include)
-target_link_libraries(stats INTERFACE Eigen3::Eigen)
-target_sources(stats INTERFACE include/stats/distribution.hpp)
+  add_library(stats INTERFACE)
+  target_include_directories(stats INTERFACE include)
+  target_link_libraries(stats INTERFACE Eigen3::Eigen)
+  target_sources(stats INTERFACE include/stats/distribution.hpp)
 
-add_subdirectory(test)
+  add_subdirectory(test)
 
 else()
-  message(WARNING "Not building libstats, install Eigen3")
+  message("Note: Not building \"libstats\"; install Eigen3 to enable")
 endif()
