Move library and test to same level

--- a/libs/libvodka/CMakeLists.txt
+++ b/libs/libvodka/CMakeLists.txt
@@ -44,4 +44,25 @@ target_sources(vodka
     include/vodka/parse_error.hpp
 )
 
-add_subdirectory(test)
+add_executable(libvodka_t)
+target_link_libraries(libvodka_t PRIVATE compiler_settings vodka test_base)
+target_sources(libvodka_t
+  PRIVATE
+    test/vodka/algorithm/all_of.cpp
+    test/vodka/algorithm/inner_product.cpp
+    test/vodka/algorithm/max.cpp
+    test/vodka/array/array.cpp
+    test/vodka/functional/less_equal.cpp
+    test/vodka/span/span.cpp
+    test/vodka/string_view/basic_string_view.cpp
+    test/vodka/type_traits/conditional.cpp
+    test/vodka/type_traits/false_type.cpp
+    test/vodka/type_traits/integral_constant.cpp
+    test/vodka/type_traits/is_const.cpp
+    test/vodka/type_traits/is_function.cpp
+    test/vodka/type_traits/is_reference.cpp
+    test/vodka/type_traits/is_void.cpp
+    test/vodka/type_traits/true_type.cpp
+    test/vodka/utility/forward.cpp
+)
+add_test(NAME test_libvodka COMMAND libvodka_t)
